# obs-headless-poc

./: .gitignore  CMakeLists.txt  README.md  compile.sh
src/: firstOpenGlApp  main.cpp  main.h
